syntax = "proto3";

package core;

//UserService
service UserService {
  rpc GetById (GetByIdRequest) returns (User) {};
}

message GetByIdRequest {
  uint32 id = 1;
}

message User {
  uint32 id = 1;
  string name = 4;
  string email = 5;
  string phone = 6;
  string email_verified_at = 7;
  string created_at = 8;
  string updated_at = 9;
  string deleted_at = 10;
}
//UserService